Closed
Bug 601347
Opened 15 years ago
Closed 15 years ago
[SeaMonkey] crash [@ nsNetscapeProfileMigratorBase::CopyCookies(int)]
Categories
(MailNews Core :: Profile Migration, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.3a1
People
(Reporter: bugzilla, Assigned: bugzilla)
References
()
Details
(Keywords: crash, fixed-seamonkey2.0.11, topcrash)
Crash Data
Attachments
(1 file)
|
1.37 KB,
patch
|
neil
:
review+
kairo
:
approval-seamonkey2.0.11+
|
Details | Diff | Splinter Review |
Bug 525513 forgot to fix the call from nsThunderbirdProfileMigrator::Migrate(), so this still crashes for SeaMonkey 2.0.x users (it's one of the topcrashers for 2.0.8). Would be nice if this could still make it into 2.0.9.
The attached branch patch also applies to trunk.
Flags: blocking-seamonkey2.0.9?
Attachment #480378 -
Flags: review?(neil)
| Assignee | ||
Updated•15 years ago
|
Assignee: nobody → aqualon
Status: NEW → ASSIGNED
Comment 1•15 years ago
|
||
This is #14 on 2.0.8 topcrashes with 100 crashes in the last week, .67% of overall crashes, and we have already rolled 2.0.9 builds, this doesn't look respin-worthy to me, even if it's an annoyance.
For 2.0.10, we'll really want it, though.
Flags: blocking-seamonkey2.0.9?
Flags: blocking-seamonkey2.0.9-
Flags: blocking-seamonkey2.0.10+
Updated•15 years ago
|
Attachment #480378 -
Flags: review?(neil) → review+
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
Whiteboard: checkin-needed for c-c 1.9.1 branch and trunk
Comment 2•15 years ago
|
||
Comment on attachment 480378 [details] [diff] [review]
return NS_ERROR_FAILURE if source profile is not available (branch version)
Checked in on c-c: http://hg.mozilla.org/comm-central/rev/1575284f0f7a
Attachment #480378 -
Flags: approval-seamonkey2.0.10?
Updated•15 years ago
|
Keywords: checkin-needed
Whiteboard: checkin-needed for c-c 1.9.1 branch and trunk
Comment 3•15 years ago
|
||
Nits, while here again:
1)
Bug 525513 comment 10:
"can you put the return NS_ERROR_FAILURE; on its own line"?
2)
http://mxr.mozilla.org/comm-central/search?string=GetSourceProfile&case=1&find=%2Fmigration%2F.*%5C.cpp%24
http://mxr.mozilla.org/comm-central/source/suite/profile/migration/src/nsSeamonkeyProfileMigrator.cpp#94
{
153 if (!mSourceProfile) {
154 GetSourceProfile(aProfile);
155 if (!mSourceProfile)
156 return NS_ERROR_FILE_NOT_FOUND;
}
Could you s/NS_ERROR_FAILURE/NS_ERROR_FILE_NOT_FOUND/g?
(Or the other way round, but use the same error everywhere.)
Thanks.
Updated•15 years ago
|
Attachment #480378 -
Flags: approval-seamonkey2.0.10? → approval-seamonkey2.0.10+
Comment 4•15 years ago
|
||
| Assignee | ||
Comment 5•15 years ago
|
||
Thanks for the checkins, marking this bug as fixed.
I'll file a followup bug for the cleanup from comment 3.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 6•15 years ago
|
||
Keywords: fixed-seamonkey2.0.10
Summary: crash [@ nsNetscapeProfileMigratorBase::CopyCookies(int)] → [SeaMonkey] crash [@ nsNetscapeProfileMigratorBase::CopyCookies(int)]
Target Milestone: --- → Thunderbird 3.3a1
Updated•15 years ago
|
Updated•15 years ago
|
Crash Signature: [@ nsNetscapeProfileMigratorBase::CopyCookies(int)]
You need to log in
before you can comment on or make changes to this bug.
Description
•