Bug 601347 - crash [@ nsNetscapeProfileMigratorBase::CopyCookies(int)], r=Neil