suite/profile/migration/src/nsThunderbirdProfileMigrator.cpp
@@ -89,8 +89,10 @@ nsThunderbirdProfileMigrator::Migrate(PRUint16 aItems,
     GetProfilePath(aStartup, getter_AddRefs(mTargetProfile));
     if (!mTargetProfile) return NS_ERROR_FAILURE;
   }
-  if (!mSourceProfile)
+  if (!mSourceProfile) {
     GetSourceProfile(aProfile);
+    if (!mSourceProfile) return NS_ERROR_FAILURE;
+  }
 
   NOTIFY_OBSERVERS(MIGRATION_STARTED, nsnull);
 
